...
};

final List<Day> tripDays = [
  const Day(
    number: 1,
    date: '29 Abril',
    title: 'Westminster, Trafalgar & Piccadilly',
    emoji: '🕰️',
    attractions: [_westminster, _trafalgar],
  ),
  const Day(
    number: 2,
    date: '30 Abril',
...
